# ModularDashboard

./: .gitignore  DEVELOP.md  LICENSE  README.md  README.zh.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
config/: README.md  memory_config_example.py  update_config.example.json  user-config-1column.json  user-config-2column.json  user-config-3column.json  user-config-slim.json  user-config.json
docs/: README.md  getting-started.md  index.md  overview.md
docs/api/: configuration.md  index.md  module-base.md
docs/api-reference/: configuration.md  index.md  module-base.md  storage.md
docs/appendix/: changelog.md  faq.md  glossary.md  index.md  troubleshooting.md
docs/developer/: architecture.md  contributing.md  index.md  module-development.md  project-structure.md
docs/developer-guide/: index.md  module-development.md
docs/development/: contributing.md  index.md  structure.md
docs/en/: README.md  overview.md
docs/en/api/: configuration.md  index.md  module-base.md
docs/en/development/: contributing.md  index.md  structure.md
docs/en/modules/: arxiv.md  github.md  index.md  rss.md
docs/en/user-guide/: configuration.md  getting-started.md  installation.md  layout.md  packaging.md
docs/guide/: configuration.md  index.md  installation.md  layout.md  modules.md  packaging.md
docs/modules/: arxiv.md  clock.md  github.md  index.md  rss.md  todo.md  weather.md
docs/theme/: main.html
docs/theme/partials/: language-selector.html
docs/user-guide/: configuration.md  getting-started.md  installation.md  layout.md  packaging.md
scripts/: create_icon.py  generate_docs.py  package.py  package.sh  package_app.py  package_briefcase.py  package_briefcase.sh  translate_docs.py
src/modular_dashboard/: __init__.py  app.py  storage.py
src/modular_dashboard/assets/: default-config.json
src/modular_dashboard/config/: manager.py  memory_config.py  schema.py
src/modular_dashboard/docs/: generator.py
src/modular_dashboard/modules/: base.py  extended.py  registry.py
src/modular_dashboard/modules/animals/: module.py
src/modular_dashboard/modules/arxiv/: module.py
src/modular_dashboard/modules/clock/: module.py
src/modular_dashboard/modules/github/: module.py
src/modular_dashboard/modules/github_trending/: module.py
src/modular_dashboard/modules/monitor/: module.py
src/modular_dashboard/modules/progress/: __init__.py  module.py
src/modular_dashboard/modules/random_fact/: module.py
src/modular_dashboard/modules/releases/: module.py
src/modular_dashboard/modules/rss/: module.py
src/modular_dashboard/modules/search/: __init__.py  module.py
src/modular_dashboard/modules/site_monitor/: module.py
src/modular_dashboard/modules/system_monitor/: module.py
src/modular_dashboard/modules/todo/: module.py
src/modular_dashboard/modules/weather/: module.py
src/modular_dashboard/static/css/: style.css
src/modular_dashboard/ui/: dashboard.py  fab.py  header.py  layout.py  module_card.py  search.py  stats_dashboard.py  stats_page.py  styles.py
src/modular_dashboard/utils/: __init__.py  compressed_cache.py  lazy_module.py  logger.py  module_stats.py  storage.py  system_monitor.py
src/modular_dashboard/utils/update/: __init__.py  checker.py  config.py  core.py  manager.py  security.py  sources.py  storage.py  ui.py
src/research_dashboard/: __init__.py  __main__.py  app.py  main.py  storage.py
src/research_dashboard/assets/: default-config.json
src/research_dashboard/config/: manager.py  schema.py
src/research_dashboard/docs/: generator.py
src/research_dashboard/modules/: base.py  extended.py  registry.py
src/research_dashboard/modules/arxiv/: module.py
src/research_dashboard/modules/clock/: module.py
src/research_dashboard/modules/github/: module.py
src/research_dashboard/modules/monitor/: module.py
src/research_dashboard/modules/releases/: module.py
src/research_dashboard/modules/rss/: module.py
src/research_dashboard/modules/todo/: module.py
src/research_dashboard/static/css/: style.css
src/research_dashboard/ui/: dashboard.py  header.py  layout.py
