[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modular-dashboard"
version = "0.0.1"
description = "本地化、模块化、可扩展信息聚合仪表盘"
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Wenjie Xu", email = "wenjie.xu.cn@outlook.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "nicegui>=2.0.0",
    "requests>=2.25.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.9.0",
    "lxml>=6.0.0",
    "arxiv>=2.0.0",
    "APScheduler>=3.0.0",
    "structlog>=25.0.0",
    "pillow>=11.0.0",
    "macholib>=1.14.0",
    "mkdocs-material>=9.0.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "pywebview>=5.0",
    "feedparser>=6.0.0",
    "mkdocs-static-i18n>=1.3.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "black", "flake8", "mypy"]

[project.scripts]
modular-dashboard-docs = "scripts.generate_docs:main"

[project.urls]
Homepage = "https://github.com/WayneXuCN/ModularDashboard"
Repository = "https://github.com/WayneXuCN/ModularDashboard"
Issues = "https://github.com/WayneXuCN/ModularDashboard/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/modular_dashboard"]

[tool.hatch.build]
include = [
    "src/modular_dashboard/**/*",
    "README.md",
    "LICENSE",
    "scripts/*",
    "docs/**/*",
]
exclude = ["tests/", "dist/", "*.pyc", "__pycache__/"]

[tool.ruff]
# Basic settings
line-length = 88
target-version = "py312"
# Excluded files and directories
exclude = [
    ".eggs",
    "*.egg-info",
    ".git",
    ".hg",
    ".mypy_cache",
    "__pycache__",
    ".tox",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enabled rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes (syntax error checking)
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (common bug checking)
    "C4",  # flake8-comprehensions (comprehension optimizations)
    "UP",  # pyupgrade (Python version upgrade suggestions)
    "SIM", # flake8-simplify (code simplification)
    "Q",   # flake8-quotes (quote checking)
]
# Ignored rules
ignore = [
    "E501", # Line length (handled by formatter)
    "B008", # Mutable default values in function arguments (sometimes needed)
]

[tool.ruff.format]
quote-style = "double"            # Use double quotes
indent-style = "space"            # Use space indentation
skip-magic-trailing-comma = false # Do not skip magic trailing comma
line-ending = "auto"              # Use automatic line ending
